[package]
name = "risclient"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["James \"ec0\" Hebden <ec0@tachibana.systems>"]
readme = "README.md"
repository = "https://github.com/devec0/risclient-rs"
description = """
An extremely simple streaming client for the RIPE RIS-Live service.
"""
categories = ["api-bindings"]
keywords = ["ris", "ris-live", "asn", "bgp", "ripe"]

[lib]
name = "risclient"
path = "src/lib.rs"

[[bin]]
name = "ristest"
path = "src/ristest.rs"

[dependencies]
futures-util = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros", "rt", "net", "rt-multi-thread", "io-std"] }
tokio-stream = "0.1"
tungstenite = { version = "0.17", features = ["native-tls"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
